--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "license": "AGPL-3.0",
   "homepage": "https://github.com/ushahidi/platform-client",
   "scripts": {
-    "build": "gulp build",
     "watch": "gulp",
     "start": "gulp node-server",
+    "postinstall": "gulp build",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor test/protractor-conf.js",
     "jshint": "jshint ."
   },
   "devDependencies": {
+    
+  },
+  "dependencies": {
     "body-parser": "^1.9.2",
     "brfs": "^1.2.0",
     "browserify": "^11.0.1",
@@ -56,9 +59,7 @@
     "underscore.string": "^2.3.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.3"
-  },
-  "dependencies": {
+    "watchify": "^3.2.3",
     "URIjs": "^1.14.1",
     "angular": "^1.3.7",
     "angular-bootstrap-colorpicker": "buberdds/angular-bootstrap-colorpicker.git#v3.0.11",
